fixed spacing and link colors

--- a/css/app.css
+++ b/css/app.css
@@ -4,7 +4,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,300italic);
 
 body {
-    background-image: url('img/quad.jpg');
+    /*background-image: url('img/quad.jpg');*/
     background-color: lightgray;
     font-family: "Lato", "Helvetica Neue", Helvetica, sans-serif;
 }
@@ -35,7 +35,7 @@ nav {
 }
 
 ol {
-    padding-left: 0px;
+    padding-left: 0;
     margin-top: 5px;
     text-align: center;
 }
@@ -52,6 +52,10 @@ a {
 
 nav a {
     color: white;
+}
+
+.btn-default {
+    color: black;
 }
 
 a:hover, a:active, a:link {
@@ -206,7 +210,7 @@ span.text-content span {
     ul.img-list li {
         display: inline-block;
         height: 300px;
-        margin-right: 15%;
+        margin-right: 10%;
         margin-bottom: 5%;
         position: relative;
         width: 150px;
